Agrego Main y Descripción

--- a/index.html
+++ b/index.html
@@ -8,13 +8,71 @@
   </head>
   <body>
     <header>
-      <img src="./Imagenes/Logo 2.png" alt="Hotel Holiday" />
-      <ul>
-        <li><a href="*">Inicio</a></li>
-        <li><a href="*">Reservas</a></li>
-        <li><a href="*">Galería</a></li>
-        <li><a href="*">Contacto</a></li>
-      </ul>
+      <nav class="navMenu">
+        <img src="./Imagenes/Logo 2.png" alt="Hotel Holiday" />
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Reservas</a></li>
+          <li><a href="#">Galería</a></li>
+          <li><a href="#">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
+    <nav>
+      <nav class="hero">
+        <nav class="heroDescription">
+          <h1>Holiday Buenos Aires Hotel</h1>
+          <p>
+            El hotel para un descanso ideal. Ubicado en el corazón de Buenos
+            Aires, contamos con el mejor equipamiento para viajeros que busquen
+            descanso y ocio.
+          </p>
+          <div class="amenities">
+            <div>
+              <img src="./Imagenes/iconoDesayuno.png" alt="Desayuno Logo" />
+              <span>Desayuno Incluído </span>
+            </div>
+            <div>
+              <img src="./Imagenes/iconoWiFi.png" alt="WiFi Logo" />
+              <span>WiFi Gratuito </span>
+            </div>
+            <div>
+              <img
+                src="./Imagenes/iconoSalaNegocios.png"
+                alt="Sala Negocio Logo"
+              />
+              <span>Salón de Negocios </span>
+            </div>
+            <div>
+              <img
+                src="./Imagenes/iconoEstacionamiento.png"
+                alt="Estacionamiento Logo"
+              />
+              <span>Estacionamiento </span>
+            </div>
+          </div>
+          <div class="heroButtons">
+            <button>Reservar</button>
+            <button>Ver Más</button>
+          </div>
+        </nav>
+        <img
+          class="heroImage"
+          src="./Imagenes/Foto Hotel Frente.jpg"
+          alt="Foto Hotel"
+        />
+      </nav>
+    </nav>
+    <nav class="generalDescription">
+      <p>
+        Holiday Buenos Aires se encuentra en pleno centro porteño, lo que le da
+        una ventaja por su cercanía a los circuitos turísticos que ofrece la
+        ciudad.<br />
+        Con una trayectoria de más de 20 años contamos con el mejor servicio
+        hotelero de Buenos Aires.<br />
+        En nuestras instalaciones también contamos con SPA, Restaurant, Pileta y
+        Salón de juegos para brindar la mayor comodidad.
+      </p>
+    </nav>
   </body>
 </html>
