--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <nav class="heroDescription">
           <h1>Holiday Buenos Aires Hotel</h1>
           <p>
-            El hotel para un descanso ideal. Ubicado en el corazón de Buenos
-            Aires, contamos con el mejor equipamiento para viajeros que busquen
-            descanso y ocio.
+            El hotel para un descanso ideal.<br />
+            Ubicado en el corazón de Buenos Aires, contamos con el mejor
+            equipamiento para viajeros que busquen descanso y ocio.
           </p>
           <div class="amenities">
             <div>
@@ -74,5 +74,113 @@
         Salón de juegos para brindar la mayor comodidad.
       </p>
     </nav>
+    <!-- Habitaciones -->
+    <h2 class="hab">Habitaciones</h2>
+    <section>
+      <!-- Card -->
+      <div class="cardSection">
+        <div class="cardProduct">
+          <img src="./Imagenes/SuiteStandard.png" />
+          <div class="cardInfo">
+            <h3>Suite Standard</h3>
+            <span> 2 Personas</span>
+          </div>
+          <div class="cardPrice">
+            <span>Por noche: $200.000</span>
+            <button>Ver más</button>
+          </div>
+        </div>
+        <!-- Card 2 -->
+        <div class="cardProduct">
+          <img src="./Imagenes/SuiteJunior.jpg" />
+          <div class="cardInfo">
+            <h3>Suite Junior</h3>
+            <span> 2 Personas</span>
+          </div>
+          <div class="cardPrice">
+            <span>Por noche: $250.000</span>
+            <button>Ver más</button>
+          </div>
+        </div>
+        <!-- Card 3 -->
+        <div class="cardProduct">
+          <img src="./Imagenes/SuiteVistaCiudad.jpg" />
+          <div class="cardInfo">
+            <h3>Suite Vista a la Ciudad</h3>
+            <span> 4 Personas</span>
+          </div>
+          <div class="cardPrice">
+            <span>Por noche: $250.000</span>
+            <button>Ver más</button>
+          </div>
+        </div>
+        <!-- Card 4 -->
+        <div class="cardProduct">
+          <img src="./Imagenes/SuiteDeLujo.jpg" />
+          <div class="cardInfo">
+            <h3>Suite Luxury</h3>
+            <span> 2 a 4 Personas</span>
+          </div>
+          <div class="cardPrice">
+            <span>Por noche: $300.000</span>
+            <button>Ver más</button>
+          </div>
+        </div>
+        <!-- Card 5 -->
+        <div class="cardProduct">
+          <img src="./Imagenes/Suite Presidencial.jpg" />
+          <div class="cardInfo">
+            <h3>Suite Presidencial</h3>
+            <span>2 a 6 Personas</span>
+          </div>
+          <div class="cardPrice">
+            <span>Por noche: $200.000</span>
+            <button>Ver más</button>
+          </div>
+        </div>
+        <!-- Card 6 -->
+        <div class="cardProduct">
+          <img src="./Imagenes/SuitePentHouse.jpg" />
+          <div class="cardInfo">
+            <h3>Suite Penthouse</h3>
+            <span> 2 a 6 Personas</span>
+          </div>
+          <div class="cardPrice">
+            <span>Por noche: $500.000</span>
+            <button>Ver más</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="contactenos">
+      <div class="heroContact">
+        <div class="contacto">
+          <h3>Contacto</h3>
+          <div class="datos">
+            <div class="capitalFederal">
+              <h4>Capital Federal</h4>
+              <div><span>Calle Falsa 1234</span></div>
+              <div><span>hotelholiday@yahoo.com</span></div>
+              <div><span>Tel:011 4777-5555</span></div>
+            </div>
+            <div class="tigre">
+              <h4>Tigre</h4>
+              <div><span>Calle Más falsa 4283</span></div>
+              <div><span>hotelholidaytigre@yahoo.com</span></div>
+              <div><span>Tel:011 4853-1824</span></div>
+            </div>
+          </div>
+        </div>
+        <img src="./Imagenes/PuenteMujer2.jpg" />
+      </div>
+    </section>
+    <footer>
+      <div>
+        <div class="logo">
+          <img src="./Imagenes/Logo.png" alt="Logo empersarial" />
+        </div>
+        <a href="#">About Us</a>
+      </div>
+    </footer>
   </body>
 </html>
