--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="mediaqueries.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
   </head>
   <body>
     <header>
+      <img src="./Imagenes/Logo 2.png" alt="Hotel Holiday" />
+      <!-- Meru Toggle -->
       <nav class="navMenu">
-        <img src="./Imagenes/Logo 2.png" alt="Hotel Holiday" />
+        <label for="menuToggle" class="menuToggle"
+          ><i class="fa-solid fa-bars"></i
+        ></label>
+        <input type="checkbox" id="menuToggle" />
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Reservas</a></li>
