--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   </head>
   <body>
     <header>
-      <img src="./Imagenes/Logo 2.png" alt="Hotel Holiday" />
+      <div>
+        <img src="./Imagenes/Logo 2.png" alt="Hotel Holiday" />
+      </div>
       <!-- Meru Toggle -->
       <nav class="navMenu">
         <label for="menuToggle" class="menuToggle"
@@ -186,9 +188,8 @@
     </section>
     <footer>
       <div>
-        <div class="logo">
-          <img src="./Imagenes/Logo.png" alt="Logo empersarial" />
-        </div>
+        <img src="./Imagenes/Logo.png" alt="Logo empersarial" />
+
         <a href="#">About Us</a>
       </div>
     </footer>
